--- a/css/app.css
+++ b/css/app.css
@@ -1,60 +1,13 @@
 body {
 	font: 14px "Oswald";
+	padding: 0;
+	margin: 0;
 }
-.card-container {
-	-webkit-perspective: 1000; 
-	perspective: 1000px;
-	margin: 25px 20px;
+h1 {
+	margin: 0;
 }
-.card {
-	position: relative;
-	-webkit-transform-style: preserve-3d; 
-	transform-style: preserve-3d; 	
-	/* 0.66s is number of seconds for transition time of card flip */
-	-webkit-transition: -webkit-transform 0.66s ease-in-out 0s;
-	transition: transform 0.66s ease-in-out 0s;	
-}
-.card, .card-face {
-	height: 80px;
-	width: 600px;
-}
-.card-face {
-	background-color: #333;
-	color: #eee;	
-	border: 8px inset #777;
-	font-size: 40px;
-	line-height: 80px;
-	text-align: center;
-	position: absolute; 
-	top: 0px; 
-	left: 0px; 	
-	-webkit-transform-origin: 100% 40px; 
-	transform-origin: 100% 40px; 
-	-webkit-backface-visibility: hidden; 
-	backface-visibility: hidden;
-}
-.card-front {
-	background: #87bde9; /* Old browsers */
-	background: -moz-linear-gradient(top,  #87bde9 0%, #416ddb 41%, #2d54bd 75%, #113491 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#87bde9), color-stop(41%,#416ddb), color-stop(75%,#2d54bd), color-stop(100%,#113491)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* IE10+ */
-	background: linear-gradient(to bottom,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#87bde9', endColorstr='#113491',GradientType=0 ); /* IE6-9 */
-}
-.card-front {
-	z-index: 2;
-	-webkit-transform: rotateX(0deg);
-	transform: rotateX(0deg);
-}
-.card-back {
-	-webkit-transform: rotateX(180deg);
-	transform: rotateX(180deg);
-}
-.card.flipped {
-	-webkit-transform: rotateX(-180deg);
-	transform: rotateX(-180deg);
+.clear-both {
+	clear: both;
 }
 .host-answer {
 	margin: 20px;
@@ -91,9 +44,129 @@ body {
 	color: red;
 	border-color: red;
 }
+#GameBoard {
+	background-color: #ddd;
+	padding: 10px;
+	width: 1024px;
+	height: 768px;
+}
+.game-answers {
+	position: absolute;
+	left: 12px;
+	bottom: 110px;
+	width: 1000px;
+	height: 460px;
+}
+.card, 
+.card-face {
+	height: 80px;
+	width: 468px;
+}
 #GameBoard .question-text {
 	visibility: hidden;
 }
 #GameBoard .question-text.visible {
 	visibility: visible;
+}
+#GameBoard .redx {
+	visibility: hidden;
+}
+#GameBoard .redx.redx-on {
+	visibility: visible;
+}
+.card-text {
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding-left: 8px;
+	height: 80px;
+	width: 200%;
+	transform-origin: 0 0;
+}
+.card-points {	
+	display: block;
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 80px;
+	text-align: center;
+	border-left: 8px solid #A29FCC;
+	box-shadow: 2px 2px 10px rgba(0,0,0,0.7) inset;
+}
+.sqeeze-10 { transform: scaleX(0.90); font-size: 38px; }
+.sqeeze-20 { transform: scaleX(0.81); font-size: 36px; }
+.sqeeze-30 { transform: scaleX(0.71); font-size: 34px; }
+.sqeeze-40 { transform: scaleX(0.63); font-size: 32px; }
+.sqeeze-50 { transform: scaleX(0.54); font-size: 32px; }
+.card-container {
+	float: left;
+	clear: left;
+}
+.card-container:nth-child(5),
+.card-container:nth-child(6),
+.card-container:nth-child(7),
+.card-container:nth-child(8) {
+	float: right;
+	clear: right;
+}
+.card-container:nth-child(5) { margin-top: -320px; }
+.card-container:nth-child(6) { margin-top: -208px; }
+.card-container:nth-child(7) { margin-top: -96px; }
+.card-container {
+	-webkit-perspective: 1000px; 
+	perspective: 1000px;
+	margin: 16px;
+}
+.card {
+	position: relative;
+	-webkit-transform-style: preserve-3d; 
+	transform-style: preserve-3d; 	
+	/* 0.66s is number of seconds for transition time of card flip */
+	-webkit-transition: -webkit-transform 0.66s ease-in-out 0s;
+	transition: transform 0.66s ease-in-out 0s;	
+}
+.card-face {
+	background-color: #333;
+	color: #eee;	
+	border: 8px solid #201F78;
+	border-right: 8px solid #6498E0;
+	border-bottom: 8px solid #6498E0;
+	font-size: 40px;
+	line-height: 80px;
+	text-align: center;
+	position: absolute; 
+	top: 0px; 
+	left: 0px; 	
+	-webkit-transform-origin: 100% 40px; 
+	transform-origin: 100% 40px; 
+	-webkit-backface-visibility: hidden; 
+	backface-visibility: hidden;
+}
+.card-front,
+.card-points {
+	background: #87bde9; /* Old browsers */
+	background: -moz-linear-gradient(top,  #87bde9 0%, #416ddb 41%, #2d54bd 75%, #113491 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#87bde9), color-stop(41%,#416ddb), color-stop(75%,#2d54bd), color-stop(100%,#113491)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #87bde9 0%,#416ddb 41%,#2d54bd 75%,#113491 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#87bde9', endColorstr='#113491',GradientType=0 ); /* IE6-9 */
+}
+.card-front {
+	z-index: 2;
+	-webkit-transform: rotateX(0deg);
+	transform: rotateX(0deg);
+}
+.card-back {
+	text-align: left;
+	-webkit-transform: rotateX(180deg);
+	transform: rotateX(180deg);
+	border: 8px solid #A29FCC;
+	background-color: #16164E;	
+}
+.card.flipped {
+	-webkit-transform: rotateX(-180deg);
+	transform: rotateX(-180deg);
 }
